--- a/ADD/Dockerfile
+++ b/ADD/Dockerfile
@@ -1,6 +1,6 @@
 FROM almalinux:9
 RUN dnf install nginx -y
-RUN rm -rf /usr/share/nginx/html/*
+RUN rm -rf /usr/share/nginx/html/index.html
 RUN chmod +r /usr/share/nginx/html/index.html
 ADD https://github.com/VSML028/Training_Documents/blob/main/Jenkins/Class_Notes.txt /usr/share/nginx/html/index.html
 EXPOSE 80
